--- a/Turnbased-Game/Views/_ViewImports.cshtml
+++ b/Turnbased-Game/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Turnbased_Game
-@namespace Turnbased_Game.Pages
+@using Turnbased_Game.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
