--- a/Turnbased-Game/Views/Home/Index.cshtml
+++ b/Turnbased-Game/Views/Home/Index.cshtml
@@ -8,6 +8,12 @@
         <div class="col-1">Message</div>
         <div class="col-5"><input type="text" class="w-100" id="messageInput" /></div>
     </div>
+     <div class="row p-1">
+        <div class="col-5">
+            <input type="button" id="coloredButton" value="Green" style="background-color: green;" />
+            <input type="button" id="coloredButton" value="Red" style="background-color: red;" />
+        </div>
+
     <div class="row p-1">
         <div class="col-6 text-end">
             <input type="button" id="sendButton" value="Send Message" />
