Using a class via sendclass button

--- a/Turnbased-Game/Views/Home/Index.cshtml
+++ b/Turnbased-Game/Views/Home/Index.cshtml
@@ -29,6 +29,11 @@
             <ul id="messagesList"></ul>
         </div>
     </div>
+    <div class="row p-1">
+        <div class="col-6 text-end">
+            <input type="button" id="sendClass" value="Send Class" />
+        </div>
+    </div>
 </div>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat.js"></script>
