--- a/Turnbased-Game/Views/Home/Index.cshtml
+++ b/Turnbased-Game/Views/Home/Index.cshtml
@@ -2,38 +2,43 @@
 <div class="container">
     <div class="row p-1">
         <div class="col-1">User</div>
-        <div class="col-5"><input type="text" id="userInput" /></div>
+        <div class="col-5">
+            <input type="text" id="userInput"/>
+        </div>
     </div>
     <div class="row p-1">
         <div class="col-1">Message</div>
-        <div class="col-5"><input type="text" class="w-100" id="messageInput" /></div>
-    </div>
-     <div class="row p-1">
         <div class="col-5">
-            <input type="button" id="coloredButton" value="Green" style="background-color: green;" />
-            <input type="button" id="coloredButton" value="Red" style="background-color: red;" />
+            <input type="text" class="w-100" id="messageInput"/>
+        </div>
+    </div>
+    <div class="row p-1">
+        <div class="col-5">
+            <input type="button" id="coloredButton" value="Green" style="background-color: green;"/>
+            <input type="button" id="coloredButton" value="Red" style="background-color: red;"/>
         </div>
 
-    <div class="row p-1">
-        <div class="col-6 text-end">
-            <input type="button" id="sendButton" value="Send Message" />
+        <div class="row p-1">
+            <div class="col-6 text-end">
+                <input type="button" id="sendButton" value="Send Message"/>
+            </div>
+        </div>
+        <div class="row p-1">
+            <div class="col-6">
+                <hr/>
+            </div>
+        </div>
+        <div class="row p-1">
+            <div class="col-6">
+                <ul id="messagesList"></ul>
+            </div>
+        </div>
+        <div class="row p-1">
+            <div class="col-6 text-end">
+                <input type="button" id="sendClass" value="Send Class"/>
+            </div>
         </div>
     </div>
-    <div class="row p-1">
-        <div class="col-6">
-            <hr />
-        </div>
-    </div>
-    <div class="row p-1">
-        <div class="col-6">
-            <ul id="messagesList"></ul>
-        </div>
-    </div>
-    <div class="row p-1">
-        <div class="col-6 text-end">
-            <input type="button" id="sendClass" value="Send Class" />
-        </div>
-    </div>
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/chat.js"></script>
 </div>
-<script src="~/js/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chat.js"></script>
